# visualizador

./: Diagrama sem nome.drawio  Diagrama.drawio  pyproject.toml
visualizador/: .todo  gpt_canvas.py  gs_demo.py  image_drag_gpt.py  key_press_gpt.py  main.py  main.pyw  posicionamento.py  viewer.py  viewer_min_example.py
visualizador/gui/: difference_viewer.py  difference_viewer.ui  difference_viewer_ui.py  resources.qrc  resources_rc.py  viewer_window.py
visualizador/gui/resources/: resources_rc.py
visualizer/: gpt_canvas.py  gs_demo.py  image_blender_gpt.py  image_drag_gpt2.py  main.pyw  test_viewer.py
visualizer/gs/: gsapi.py
visualizer/gui/: draggable_image.py  image_viewer.py  main_window.py
visualizer/gui/old/: difference_viewer_ui.py  viewer_window.py
visualizer/gui/old/resources/: resources.qrc  resources_rc.py
