[tool.poetry]
name = "visualizador"
version = "0.1.0"
description = ""
authors = ["Everton de Souza <e.rodrigo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.2"
pillow = "^10.0.0"

[tool.pylint.'MESSAGES CONTROL']

disable=[
  'no-name-in-module'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
