[tool.poetry]
name = "visualizer"
version = "0.1.0"
description = ""
authors = ["Careca Voador <e.rodrigo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.6.1"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
